--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "mint-ui": "^2.2.13",
     "mui": "0.0.1",
+    "node-sass": "^4.11.0",
+    "sass": "^1.18.0",
+    "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.5"
   },
